<!--

        Copyright © 2016 Yassine Siela
        Copyright © 2016 AIP Primeca RAO
        Copyright © 2016-2017 Université Savoie Mont Blanc

        ITAC-Core-Android is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
    <string name="app_name">ITAC</string>
    <string name="load_image_text">Charger une image</string>
    <string name="take_photo_text">Prendre une photo</string>
    <string name="ZP_text">Zone de partage</string>
    <string name="cancel_text">Annuler</string>
    <string name="valid_text">Valider</string>
    <string name="add_article_text">Ajouter un article</string>
    <string name="modify_text">Modifier</string>
    <string name="suppress_text">Supprimer</string>
    <string name="itac_text">ITAC</string>
    <string name="connect_text">Se connecter</string>
    <string name="enter_address_hint">Adresse IP</string>
    <string name="enter_port_hint">Numéro de port</string>
    <string name="enter_login_hint">Login</string>
    <string name="enter_password_hint">Mot de passe</string>
    <string name="connect_item">Connexion</string>
    <string name="disconnect_item">Déconnexion</string>
    <string name="connexion_parameters_item">Paramètres de connexion</string>
    <string name="image_resolution_menu">Résolution de l\'image</string>
    <string name="image_resolution_high_item">Haute résolution</string>
    <string name="image_resolution_standard_item">Résolution moyenne</string>
    <string name="quit_item">Quitter</string>
    <string name="pseudo_hint">Pseudo</string>
    <string name="title_hint">Titre</string>
    <string name="message_hint">Message</string>
    <string name="cancel_btn_desc">Bouton annuler</string>
    <string name="ok_btn_desc">Bouton valider</string>
    <string name="about_title">À propos de</string>
    <string name="about_text"><![CDATA[<p>ITAC-Core-Android version %1$s</p>
        <p>ITAC-Core-Android est un client android utilisable pour
            la gestion de l\'espace privé de l\'application collaborative ITAC.
        </p>
        <p>Il s\'agit d\'un logiciel libre
            distribué gratuitement et régi par la
            <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"><b>Licence Publique Générale GNU (GPL v3.0)</b></a>.
        </p>
        <p>Le code source est téléchargeable à partir du
        <a href="https://bitbucket.org/stalb/itac-core-android/">dépot Git du projet</a>.
        </p>
        <p>ITAC-Core-Android a été développé par : <br>
            &nbsp;&nbsp;&nbsp;&nbsp;- Thibault Carron<br>
            &nbsp;&nbsp;&nbsp;&nbsp;- Philippe Pernelle<br>
            &nbsp;&nbsp;&nbsp;&nbsp;- Yassine Siela<br>
            &nbsp;&nbsp;&nbsp;&nbsp;- Stéphane Talbot
        </p>
        <p>Il utilise également plusieurs composants open-source distribués
            sous licence MIT, licence Apache v2.0, licence Publique Eclipse v1.0 ou v2.0.</p>]]>
    </string>
</resources>
