<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.learning_adventure.android.itac.android_app_activity.EspacePersonnelActivity">

    <item android:id="@+id/parametre"
        android:title="@string/connexion_parameters_item"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/qualité"
        android:title="@string/image_resolution_menu"
        android:orderInCategory="100"
        app:showAsAction="never">

        <menu >
            <group
                android:checkableBehavior="single">
            <item android:id="@+id/hauteResolution"
                android:title="@string/image_resolution_high_item"   />

            <item android:id="@+id/moyenneResolution"
                android:title="@string/image_resolution_standard_item"
                android:checked="true"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/quitter"
        android:title="@string/quit_item"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>