<!--

        Copyright © 2016 Yassine Siela
        Copyright © 2016 AIP Primeca RAO
        Copyright © 2016-2018 Université Savoie Mont Blanc

        ITAC-Core-Android is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background"
              tools:context=".android_app_activity.AuthentificationActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itac_text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#f6f055"
        android:id="@+id/textView2"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="20dp"
        android:background="@drawable/rounded_corner_blue">

        <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:layout_marginTop="15sp"
            android:id="@+id/pseudo"
            android:hint="@string/pseudo_hint"
            android:background="#90caf9"
            android:inputType="textVisiblePassword|textNoSuggestions"
            />

        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/avatarGridView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/pseudo"
                  android:layout_margin="15dp"
                  android:columnWidth="80dp"
                  android:gravity="center"
                  android:horizontalSpacing="5dp"
                  android:numColumns="4"
                  android:stretchMode="spacingWidthUniform"
                  android:verticalSpacing="5dp"
            />

        <Button
            android:layout_below="@+id/avatarGridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/loginbtn"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_corner_yellow"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/connect_text"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>